[package]
name = "moves"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moves"
path = "src/main.rs"

[[bin]]
name = "generate-melody"
path = "src/bin/generate_melody.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
anyhow = "1.0"
libc = "0.2"
hound = "3.5"
